[package]
name = "ppdioo"
version = "1.0.1"
edition = "2024"
authors = ["Ozgur Karatas <ozgur@linux.com>"]
description = "A package receives netplan on SDN Controller forwards to NATS.IO"
license = "MIT"
homepage = "https://goosey.org/netplan"
repository = "https://github.com/ta2ozg/ppdioo"
documentation = "https://docs.rs/ppdioo"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
base64 = "0.13"
nats = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
